# Dynamite-remake

./: .gitignore  LICENSE  README.md  build.sh  ci_test.bat  ci_test.sh
android/: build.gradle  gradle.properties  local.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/songs/001/: metadata.json
android/app/src/main/assets/songs/song_sample/: chart_hard.chart
android/app/src/main/cpp/: CMakeLists.txt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
assets/config/: default_settings.json
assets/songs/003/: chart_mega.xml  metadata.json  test_no_bpm.xml
assets/songs/song_sample/: chart_giga.chart  metadata.json
core/: CMakeLists.txt  temp_script.py
core/docs/: fixes.md
core/src/: main.cpp  test_core.cpp  test_core_catch2.cpp  test_core_extended.cpp  test_main.cpp  test_render_chain.cpp
core/src/bridge/: go_bridge.h  go_bridge_android.cpp  go_bridge_desktop.cpp  go_bridge_ios.mm
core/src/engine/: audio_clock.cpp  audio_clock.h  audio_engine.cpp  audio_engine.h  chart_parser.cpp  chart_parser.h  input_manager.cpp  input_manager.h  judge_engine.cpp  judge_engine.h  render_batch.cpp  render_batch.h
core/src/gameplay/: background_renderer.cpp  background_renderer.hpp  footer_renderer.cpp  footer_renderer.hpp  gameplay_render_command.hpp  gameplay_ui_config.hpp  hit_effect_renderer.cpp  hit_effect_renderer.hpp  hold_note_renderer.cpp  hold_note_renderer.hpp  hud_renderer.cpp  hud_renderer.hpp  i_renderer.cpp  i_renderer.hpp  judge_line_renderer.cpp  judge_line_renderer.hpp  lane_coordinate.cpp  lane_coordinate.hpp  tap_note_renderer.cpp  tap_note_renderer.hpp
core/src/legacy/: scene_gameplay.cpp
core/src/platform/: asset_loader.cpp  asset_loader.h  gl_context.cpp  sdl_context.cpp
core/src/scenes/: scene_base.h  scene_gameplay.h  scene_gameplay_new.cpp  scene_gameplay_new.hpp  scene_main_menu.cpp  scene_main_menu.h  scene_result.cpp  scene_result.h  scene_settings.cpp  scene_settings.h  scene_shop.cpp  scene_shop.h  scene_song_select.cpp  scene_song_select.h
core/src/utils/: config_manager.cpp  config_manager.h  logger.cpp  logger.h  perf_monitor.h  resource_cache.cpp  resource_cache.h  texture.cpp  texture.h
docs/: DYN_REBUILD_ARCHITECTURE.md  api_spec.md  chart_format.md  development_progress.md
ios/GameApp/: AppDelegate.mm
server/: go.mod
server/internal/model/: song.go
server/internal/repository/: sqlite_repo.go
server/internal/service/: game_service.go  score_service.go
server/mobile/: api.go
server/pkg/config/: config.go
tools/: build_desktop.py  normalize.py
tools/cmake-portable/cmake-3.28.6-windows-i386/doc/cmake/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
tools/cmake-portable/cmake-3.28.6-windows-i386/doc/cmake/html/_static/: documentation_options.js
tools/cmake-portable/cmake-3.28.6-windows-i386/doc/cmake/html/command/: add_compile_definitions.html  add_compile_options.html  add_custom_command.html  add_custom_target.html  add_definitions.html  add_dependencies.html  add_executable.html  add_library.html  add_link_options.html  add_subdirectory.html  add_test.html  aux_source_directory.html  block.html  break.html  build_command.html  build_name.html  cmake_file_api.html  cmake_host_system_information.html  cmake_language.html  cmake_minimum_required.html  cmake_parse_arguments.html  cmake_path.html  cmake_policy.html  configure_file.html  continue.html  create_test_sourcelist.html  ctest_build.html  ctest_configure.html  ctest_coverage.html  ctest_empty_binary_directory.html  ctest_memcheck.html  ctest_read_custom_files.html  ctest_run_script.html  ctest_sleep.html  ctest_start.html  ctest_submit.html  ctest_test.html  ctest_update.html  ctest_upload.html  define_property.html  (+88 more)
tools/cmake-portable/cmake-3.28.6-windows-i386/doc/cmake/html/cpack_gen/: archive.html  bundle.html  cygwin.html  deb.html  dmg.html  external.html  freebsd.html  ifw.html  innosetup.html  nsis.html  nuget.html  packagemaker.html  productbuild.html  rpm.html  wix.html
tools/cmake-portable/cmake-3.28.6-windows-i386/doc/cmake/html/envvar/: ADSP_ROOT.html  ASM_DIALECT.html  ASM_DIALECTFLAGS.html  CC.html  CCMAKE_COLORS.html  CFLAGS.html  CMAKE_APPBUNDLE_PATH.html  CMAKE_APPLE_SILICON_PROCESSOR.html  CMAKE_BUILD_PARALLEL_LEVEL.html  CMAKE_BUILD_TYPE.html  CMAKE_COLOR_DIAGNOSTICS.html  CMAKE_CONFIGURATION_TYPES.html  CMAKE_CONFIG_TYPE.html  CMAKE_CROSSCOMPILING_EMULATOR.html  CMAKE_EXPORT_COMPILE_COMMANDS.html  CMAKE_FRAMEWORK_PATH.html  CMAKE_GENERATOR.html  CMAKE_GENERATOR_INSTANCE.html  CMAKE_GENERATOR_PLATFORM.html  CMAKE_GENERATOR_TOOLSET.html  CMAKE_INCLUDE_PATH.html  CMAKE_INSTALL_MODE.html  CMAKE_LANG_COMPILER_LAUNCHER.html  CMAKE_LANG_IMPLICIT_LINK_DIRECTORIES_EXCLUDE.html  CMAKE_LANG_LINKER_LAUNCHER.html  CMAKE_LIBRARY_PATH.html  CMAKE_MAXIMUM_RECURSION_DEPTH.html  CMAKE_MSVCIDE_RUN_PATH.html  CMAKE_NO_VERBOSE.html  CMAKE_OSX_ARCHITECTURES.html  CMAKE_PREFIX_PATH.html  CMAKE_PROGRAM_PATH.html  CMAKE_TOOLCHAIN_FILE.html  CSFLAGS.html  CTEST_INTERACTIVE_DEBUG_MODE.html  CTEST_NO_TESTS_ACTION.html  CTEST_OUTPUT_ON_FAILURE.html  CTEST_PARALLEL_LEVEL.html  CTEST_PROGRESS_OUTPUT.html  CTEST_USE_LAUNCHERS_DEFAULT.html  (+26 more)
tools/cmake-portable/cmake-3.28.6-windows-i386/doc/cmake/html/generator/: Borland Makefiles.html  CodeBlocks.html  CodeLite.html  Eclipse CDT4.html  Green Hills MULTI.html  Kate.html  MSYS Makefiles.html  Ninja.html  (+20 more)
tools/cmake-portable/cmake-3.28.6-windows-i386/man/man1/: ccmake.1  cmake-gui.1  cmake.1  cpack.1  ctest.1
tools/cmake-portable/cmake-3.28.6-windows-i386/man/man7/: cmake-buildsystem.7  cmake-commands.7  cmake-compile-features.7  cmake-configure-log.7  cmake-cxxmodules.7  cmake-developer.7  cmake-env-variables.7  cmake-file-api.7  cmake-generator-expressions.7  cmake-generators.7  cmake-language.7  cmake-modules.7  cmake-packages.7  cmake-policies.7  cmake-presets.7  cmake-properties.7  cmake-qt.7  cmake-server.7  cmake-toolchains.7  cmake-variables.7  cpack-generators.7
(+1760 files in other folders)
